--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "lint": "eslint \"src/\" --cache --fix --format table"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
