--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "ant": "^0.2.0",
+    "antd": "^4.8.0",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
